--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -21,7 +21,6 @@
     position: relative;
     top: 0;
     left: 0;
-    z-index: 1;
 }
 
 .card a{
@@ -38,6 +37,8 @@
     width: 50px;
     height: auto;
     border-radius: 50%;
+    padding: 0;
+    margin: 0;
     
 }
 
@@ -46,5 +47,4 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 2;
 }
