--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,7 +13,7 @@
 .home video{
     object-fit: cover;
     position: absolute;
-    width: 100%;
+    width: 100vw;
     height: 45vh;
     z-index:1;
 }
@@ -67,9 +67,9 @@
     border: 1px solid grey;
     border-radius: 10px;
     box-shadow: 2px 2px 1px lightslategray;
-    width: 400px;
-    height: 130px;
-    padding: 10px;
+    width: 300px;
+    height: 150px;
+    padding: 8px;
 }
 
 .mainContent a{
