--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -15,7 +15,7 @@
 }
 
 .card img{
-    height: auto;
+    height: 200px;
     width: 200px;
     padding: 2px;
     position: relative;
@@ -34,7 +34,7 @@
 }
 
 .flag img{
-    width: 50px;
+    width: 40px;
     height: auto;
     border-radius: 50%;
     padding: 0;
