--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,8 +1,7 @@
 .footer{
     position: fixed;
-    left: 0;
     bottom: 0;
-    width: 100%;
+    width: 1200px;
     height: 10vh;
     display: flex;
     justify-content: center;
