--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,7 +13,7 @@
 .home video{
     object-fit: cover;
     position: absolute;
-    width: 100vw;
+    width: 1200px;
     height: 45vh;
     z-index:1;
 }
