--- a/src/styles/Recipies.module.css
+++ b/src/styles/Recipies.module.css
@@ -34,4 +34,6 @@
     justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
+    margin-top: 30px;
+    padding: 10px;
 }
