quickfix header logo

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -10,9 +10,14 @@
     margin-top: 20px;
     color: grey;
     font-size: 30px;
+    
+    
+}
+
+.header a{
     text-decoration-line: none;
     text-decoration: none;
-    
+
 }
 
 
