--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   padding: 0;
-  max-width: 1200px;
+  min-width: 1200px;
   scroll-behavior: smooth;
   scroll-padding-top: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
