--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,7 +1,5 @@
 .footer{
-    position: fixed;
-    bottom: 0;
-    width: 1200px;
+    width: 100vw;
     height: 10vh;
     display: flex;
     justify-content: center;
