--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+html{
+  scroll-behavior: smooth;
+
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
   padding: 0;
   min-width: 1200px;
-  scroll-behavior: smooth;
-  scroll-padding-top: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
