--- a/src/styles/SingleRecipe.module.css
+++ b/src/styles/SingleRecipe.module.css
@@ -33,9 +33,9 @@
 }
 
 .flagImg{
-    width: 40px;
+    width: 60px;
     height: auto;
-    border-radius: 50%;
+    border-radius: 40%;
     position: absolute;
     top: 0;
     left: 0;
@@ -57,6 +57,13 @@
 
 .ingredients{
     grid-area:ingredients
+}
+
+.ingredients table td{
+    border-bottom: 1px solid lightslategray;
+    width: 100%;
+    height: 50px;
+    
 }
 
 .instructions{
