--- a/src/styles/Addnew.module.css
+++ b/src/styles/Addnew.module.css
@@ -1,75 +1,72 @@
-.addnew{
-    min-height: 100vh;
-   
+.addnew {
+  min-height: 100vh;
 }
-.form{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 0 auto;
-    max-width: 30vw;
-    padding: 5px 20px;
-}
-
-.from h1{
-    border-bottom: 1px solid white;
-    color: #3d3d3d;
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 24px;
-    padding: 10px;
-    text-align: center;
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 auto;
+  max-width: 30vw;
+  padding: 5px 20px;
 }
 
-.form input, .form select{
-    border: 1px solid grey;
-    border-radius: 4px;
-    box-sizing: border-box;
-    padding: 5px;
-    width: 100%;
+.from h1 {
+  border-bottom: 1px solid white;
+  color: #3d3d3d;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  padding: 10px;
+  text-align: center;
+}
+
+.form input,
+.form select {
+  border: 1px solid grey;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding: 5px;
+  width: 100%;
 }
 
 .form label {
-    color: #3d3d3d;
-    display: block;
-    font-size: 14px;
-    font-weight: 500;
-    margin: 10px 0;
+  color: #3d3d3d;
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  margin: 10px 0;
 }
 
-.form input[type=submit]{
-    color: white;
-    background-color: darkgreen;
-    margin: 5px 0px;
-    width: 80px;
+.form input[type="submit"] {
+  color: white;
+  background-color: darkgreen;
+  margin: 5px 0;
+  width: 80px;
 }
 
 .form textarea {
-    height: 100px;
-     border: 1px solid grey;
-    border-radius: 4px;
-    box-sizing: border-box;
-    padding: 5px;
-    width: 100%;
+  height: 100px;
+  border: 1px solid grey;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding: 5px;
+  width: 100%;
 }
 
-.form2 > div{
-    display: flex;
-    justify-content: space-between;
- 
+.form2 > div {
+  display: flex;
+  justify-content: space-between;
 }
 
 .form2 > div input {
-    width: 100%;
+  width: 100%;
 }
 
-.form2 button{
-    background: white;
-    color: darkgreen;
-    border: 1px solid green;
-    border-radius: 4px;
-    margin: 2px 0;
-    height: 30px;
-    
-
+.form2 button {
+  background: white;
+  color: darkgreen;
+  border: 1px solid green;
+  border-radius: 4px;
+  margin: 2px 0;
+  height: 30px;
 }
