--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -16,7 +16,8 @@
 
 .card img{
     height: 200px;
-    width: 200px;
+    width: 100%;
+    object-fit: cover;
     padding: 2px;
     position: relative;
     top: 0;
